# rusty-controller

./: Cargo.toml  README.md  build_and_copy.sh  build_and_transfer.sh
.cargo/: config
examples/: config.json
src/: config.rs  constants.rs  handle_json.rs  main.rs  packets.rs  setup.rs
